examples/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
  labels:
    amazonmsk: "true"
    datadog-agents: "true"
