examples/nlb-svcs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: msg-bus1 #10.244.124.198
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    external-dns/provider: all-eks
    external-dns.alpha.kubernetes.io/hostname: msg-bus1.usva.dbdev.web.elco.cloud
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:311543950481:certificate/0c7671d9-2b79-48f0-a281-35ce5f5a1e00
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: TCP
  namespace: confluent
spec:
  externalName: b-1.bifrostusvadbdevmskkaf.7929xq.c3.kafka.us-east-1.amazonaws.com
  ports:
    - port: 9096
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: msg-bus2 #10.244.125.180
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    external-dns/provider: all-eks
    external-dns.alpha.kubernetes.io/hostname: msg-bus2.usva.dbdev.web.elco.cloud
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:311543950481:certificate/0c7671d9-2b79-48f0-a281-35ce5f5a1e00
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: TCP
  namespace: confluent
spec:
  externalName: b-2.bifrostusvadbdevmskkaf.7929xq.c3.kafka.us-east-1.amazonaws.com
  ports:
    - port: 9096
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: msg-bus3 #10.244.125.48
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    external-dns/provider: all-eks
    external-dns.alpha.kubernetes.io/hostname: msg-bus3.usva.dbdev.web.elco.cloud
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:311543950481:certificate/0c7671d9-2b79-48f0-a281-35ce5f5a1e00
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: TCP
  namespace: confluent
spec:
  externalName: b-3.bifrostusvadbdevmskkaf.7929xq.c3.kafka.us-east-1.amazonaws.com
  ports:
    - port: 9096
  type: LoadBalancer



# /usr/local/kafka
# ./bin/kafka-console-producer --bootstrap-server msg-bus1.usva.dbdev.web.elco.cloud:9096 --topic test-topic-1 --producer.config client-admin.properties

# /usr/local/kafka
#cat client.properties
# security.protocol=SASL_SSL
# sasl.mechanism=SCRAM-SHA-512
# sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="msk-dbdev-usva-clientapp1" password="mock";
